Changed font color to black for better readability and final.html page is now running. Images are not yet displayed correctly

--- a/app/static/styles/common.css
+++ b/app/static/styles/common.css
@@ -18,7 +18,7 @@ body {
   animation: gradient 15s ease infinite;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  color: #fff;
+  color: #000000;
   min-height: 100vh;
   perspective: 1000px;
   width: 100vw;
@@ -30,7 +30,7 @@ body {
   justify-content: center; /* Center vertically */
   align-items: center; /* Center horizontally */
   font-family: sans-serif;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 @keyframes gradient {
